Issue #11292 - Missing Date Response Header.
* Revert changes to boolean values in HttpConfiguration from commit 103e1d95fda3539eb5356d74daa52459bd516c3f
* Add Unit Tests for Date Response header
  in ee10 and DistributionTests